init/css/style.css
@font-face {
  font-family: Verdana, Geneva, Tahoma, sans-serif;
  src: url(/init/fonts/verdana.ttf);
}

* {
  box-sizing: border-box;
}

body {  
  font:16px Verdana, Geneva, Tahoma, sans-serif;
}

h2 {
  font-size: 3rem;
  font-style: normal;
  font-weight: 100;
  text-transform: uppercase;
}

h3{
  font-size: 2rem;
  font-style: normal;
  font-weight: 100;
  text-transform: uppercase;
}

a{
  text-decoration: none;
}



  .site-header {
  display: flex;
  justify-content: center; 
  flex-direction: row;
  align-items: center;
  background-color: white;
  /* background-color: grey; */
  }

  .container{
    width: 100%;
  }

.article{
  background-image: url('../img/a_1.jpg') ;
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center center;
  min-height: 400px;
  width: 100%;
  height: 80vh;

}

nav {
  position: -webkit-sticky; /* For Safari */
  position: sticky;
  top: 0;
  z-index: 1000; /* Ensure it stays on top of other content */
  background-color: white; /* Optional: ensures the nav bar isn't transparent */
}
  
  .nav--list {
    display: flex; 
    flex-direction: row;
    flex-wrap: wrap; 
    justify-content: center;
    margin: 10px;
    text-transform: uppercase;
    list-style-type: none;
    gap: 20px;
    
    /* padding: 0 0 0 0; */
   
    
    
  }
  
  .nav--list > li {
    /* margin: 0 60px 0 60px; */
    color: black;
    cursor: pointer;

  }
  
  /* .nav--list > li:hover {
    cursor: pointer;
  
  } */

  .nav--item > a {
    padding:10px 50px;
    color: black;
    font-size: 1rem;
    display: inline-block; /* Ensure that transitions apply smoothly */
    transition: font-size 0.3s ease, padding 0.3s ease; /* Transition for smooth effect */
  }
    
    .nav--item > a:hover {
      font-size: 1.1rem; /* Increase font size */
   
    }

    .paragraph {
      margin: 0 15% 0 15%
    }
    

.space {
  margin: 100px;
}

 .copyright {
  width: 100%;
  display: flex;
  justify-content: center; 
  background-color: white;
  
} 

.grid-gallery {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
  grid-auto-rows: 200px;
  grid-gap: 10px;
}

/* .grid-item {
  background-size: cover;
  background-position: center;
} */

.grid-item {
  background-size: cover;
  background-position: center;
  display: block; /* Ensure grid items are block elements */
}

.grid-item.large { 
  grid-column: span 2; 
  grid-row: span 4; 
}

.grid-item.small { 
  grid-column: span 2; 
  grid-row: span 2; 
}


.copyright{
  gap:1%;
}

#insta{
  display: flex;
  align-items: center;
  color: inherit;
  text-decoration: none;
}

/* New rule for Instagram icon */
.fab.fa-instagram {
  color: black;
  font-size: 2em; 
}

.split {
display: flex;
flex-direction: row;
}

#me{
  margin:0 10px 0 60px
}

.flag{
  height: 15px;
  width: 20px;
}


.me {
  /* width: 200px; */
  height: 300px;            
  }

  :root {
    --swiper-navigation-color: #ffffff;
    --swiper-theme-color: #ef233c;
  }
  
  .swiper {
    width: 80%;
    height: 200px;
    min-height: 320px;
    background-color: #46677b;
  }
  
  .swiper-slide {
    font-size: 18px;
    background: #fff;
    display: flex;
  
    &::after {
      display: block;
      content: "";
      position: absolute;
      left: 0;
      bottom: 0;
      width: 100%;
      height: 100%;
      background-image: linear-gradient(
        359deg,
        rgb(16.863% 17.647% 25.882%) 0%,
        rgb(15.809% 16.544% 24.265% / 0.9375) 6.25%,
        rgb(14.755% 15.441% 22.647% / 0.875) 12.5%,
        rgb(13.701% 14.338% 21.029% / 0.8125) 18.75%,
        rgb(12.647% 13.235% 19.412% / 0.75) 25%,
        rgb(11.593% 12.132% 17.794% / 0.6875) 31.25%,
        rgb(10.539% 11.029% 16.176% / 0.625) 37.5%,
        rgb(9.485% 9.926% 14.559% / 0.5625) 43.75%,
        rgb(8.431% 8.824% 12.941% / 0.5) 50%,
        rgb(7.377% 7.721% 11.324% / 0.4375) 56.25%,
        rgb(6.324% 6.618% 9.706% / 0.375) 62.5%,
        rgb(5.27% 5.515% 8.088% / 0.3125) 68.75%,
        rgb(4.216% 4.412% 6.471% / 0.25) 75%,
        rgb(3.162% 3.309% 4.853% / 0.1875) 81.25%,
        rgb(2.108% 2.206% 3.235% / 0.125) 87.5%,
        rgb(1.054% 1.103% 1.618% / 0.0625) 93.75%,
        rgb(0% 0% 0% / 0) 100%
      );
    }
  }

  .title {
    padding: 0 10vw;
    position: absolute;
    top: 50%;
    transform: translateY(-50%);
    width: 100%;
    z-index: 1;
    color: #ffffff;
  
    &__text {
      letter-spacing: -2px;
      font-size: clamp(3rem, 0.3864rem + 13.0682vw, 7rem);
      margin-bottom: 0;
      margin-top: 0;
      position: relative;
  
      &::after {
        position: absolute;
        top: 100%;
        content: "";
        display: block;
        width: 100px;
        height: 0.25em;
        background-color: #ef233c;
      }
    }
  }
  
  /*
    Style up the image behind each slide
  */
  .background-image {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
  
    &__image {
      display: block;
      width: 100%;
      height: 100%;
      object-fit: cover;
      opacity: 0.8;
      mix-blend-mode: luminosity;
    }
  }
  




/* Responsive adjustments */
@media (max-width: 600px) {

  h3{
    display: flex;
    justify-content: center; 
   
  }

  .grid-item.large { 
    grid-column: span 1; 
    grid-row: span 2; 
  }

  .grid-item { 
    grid-column: span 1; 
    grid-row: span 1; 
  }

  .copyright{
    gap:2%;
  }

  .nav--list {
    display: flex; 
    flex-direction: column; /**/
    align-items: center; /**/
    margin: 0;
    gap: 0;
    padding:0;
  }
  
  .nav--list > li {
    /* margin: 0 60px 0 60px; */
    color: black;
    cursor: pointer;

  }
  
  /* .nav--list > li:hover {
    cursor: pointer;
  
  } */

  .nav--item > a {
    padding:10px 50px;
    color: black;
    font-size: 1rem;
    display: inline-block; /* Ensure that transitions apply smoothly */
    transition: font-size 0.3s ease, padding 0.3s ease; /* Transition for smooth effect */
    /* padding: 10px; */
  }

  .split {
    display: flex;
    flex-direction: column;
    }

    .me {
      /* width: 200px; */
      height: 200px;            
      }

    #me{
      margin-left: 0;
    }

}

